--- a/src/pages/Index.module.css
+++ b/src/pages/Index.module.css
@@ -5,5 +5,5 @@
 }
 
 .main h1 {
-  margin: calc(2 * var(--m-xl)) 0 var(--m-xl);
+  margin: var(--m-xl) 0;
 }
